--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/media/sflogo.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/media/sflogo.svg" />
+    <link rel="icon" type="image/svgLogo" sizes="32x32" href="/media/sflogo.svg" />
+    <link rel="icon" type="image/svgLogo" sizes="16x16" href="/media/sflogo.svg" />
     <title>Delta XR</title>
   </head>
   <body>
