--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/media/sflogo.svg" />
     <link rel="icon" type="image/svgLogo" sizes="32x32" href="/media/sflogo.svg" />
     <link rel="icon" type="image/svgLogo" sizes="16x16" href="/media/sflogo.svg" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Delta XR</title>
   </head>
   <body>
