Lucky orange support

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/svgLogo" sizes="16x16" href="/media/sflogo.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Delta XR</title>
+    <script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=281c98f1"></script>
   </head>
   <body>
     <div id="root"></div>
