--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="icon" type="image/svg+xml" href="/media/sflogo.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/media/sflogo.svg" />
     <link rel="icon" type="image/svgLogo" sizes="32x32" href="/media/sflogo.svg" />
