--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Delta XR</title>
-    <script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=281c98f1"></script>
+    <!-- <script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=281c98f1"></script> -->
   </head>
   <body>
     <div id="root"></div>
