--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="icon" type="image/svg+xml" href="/media/sflogo.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/media/sflogo.svg" />
     <link rel="icon" type="image/svgLogo" sizes="32x32" href="/media/sflogo.svg" />
